fpp_parser/src/tests/cycle-1.ref.txt
 --> [ local path prefix ]/cycle-3.fpp:1:1
  |
1 | include "cycle-1.fpp"
  | ^^^^^^^^^^^^^^^^^^^^^ included from [ local path prefix ]/cycle-1.fpp:1:1
  |
  = error: included from [ local path prefix ]/cycle-1.fpp
  = error: included from [ local path prefix ]/cycle-3.fpp
  = error: included from [ local path prefix ]/cycle-2.fpp
  = error: included from [ local path prefix ]/cycle-1.fpp

